Change some markup to avoid sidebar overflowing

--- a/app/assets/stylesheets/admin/spree_store_credits.css
+++ b/app/assets/stylesheets/admin/spree_store_credits.css
@@ -1,3 +1,11 @@
 /*
  *= require admin/spree_backend
 */
+
+table#store_credits.index {
+  table-layout: fixed;
+}
+
+table#store_credits.index td {
+  word-wrap: break-word;
+}
